Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/forwardRef/TestEnum6.out
TestEnum6.java:10:18: compiler.err.illegal.self.ref
1 error
